--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ruff black mypy
-          pip install -e .
+          pip install -e ".[dev]"
       
       - name: Run ruff
         run: ruff check src/ tests/
@@ -52,8 +51,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov pytest-mock
-          pip install -e .
+          pip install -e ".[test]"
       
       - name: Run tests
         run: |
