--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,8 +18,8 @@ jobs:
         with:
           python-version: "3.11"
       
-      - name: Install ruff
-        run: pip install ruff
+      - name: Install dependencies
+        run: pip install -e ".[dev]"
       
       - name: Run ruff check
         run: ruff check src/ tests/ --output-format=github
@@ -35,8 +35,8 @@ jobs:
         with:
           python-version: "3.11"
       
-      - name: Install black
-        run: pip install black
+      - name: Install dependencies
+        run: pip install -e ".[dev]"
       
       - name: Run black
         run: black --check --diff src/ tests/
@@ -53,9 +53,7 @@ jobs:
           python-version: "3.11"
       
       - name: Install dependencies
-        run: |
-          pip install mypy
-          pip install -e .
+        run: pip install -e ".[dev]"
       
       - name: Run mypy
         run: mypy src/ --ignore-missing-imports
