--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,18 @@ dependencies = [
   "paramiko>=3.5.0,<4.0.0",
 ]
 
+[project.optional-dependencies]
+test = [
+  "pytest>=7.0.0,<8.0.0",
+  "pytest-cov>=4.0.0,<5.0.0",
+  "pytest-mock>=3.10.0,<4.0.0",
+]
+dev = [
+  "ruff>=0.1.0,<1.0.0",
+  "black>=23.0.0,<24.0.0",
+  "mypy>=1.0.0,<2.0.0",
+]
+
 [project.scripts]
 mcp-ssh-orchestrator = "mcp_ssh.mcp_server:main"
 
@@ -24,3 +36,68 @@ mcp_ssh = ["py.typed"]
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.ruff]
+target-version = "py311"
+line-length = 88
+select = [
+  "E",  # pycodestyle errors
+  "W",  # pycodestyle warnings
+  "F",  # pyflakes
+  "I",  # isort
+  "B",  # flake8-bugbear
+  "C4", # flake8-comprehensions
+  "UP", # pyupgrade
+]
+ignore = [
+  "E501",  # line too long, handled by black
+  "B008",  # do not perform function calls in argument defaults
+  "C901",  # too complex
+]
+
+[tool.ruff.per-file-ignores]
+"__init__.py" = ["F401"]
+
+[tool.black]
+target-version = ['py311']
+line-length = 88
+include = '\.pyi?$'
+extend-exclude = '''
+/(
+  # directories
+  \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | build
+  | dist
+)/
+'''
+
+[tool.mypy]
+python_version = "3.11"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+disallow_untyped_decorators = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+warn_unreachable = true
+strict_equality = true
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = [
+  "--strict-markers",
+  "--strict-config",
+  "--verbose",
+]
