--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -80,3 +80,7 @@ updates:
     labels:
       - "dependencies"
       - "docker"
+    # Ignore major version updates for Python base image to avoid invalid versions
+    ignore:
+      - dependency-name: "python"
+        update-types: ["version-update:semver-major"]
