Fix SSH host key handling and update compose configuration
- Add AcceptPolicy class to handle unknown host keys without saving them
- Fix SSH client logic to properly respect require_known_host: false setting
- Update docker-compose.yml to build locally instead of pulling from registry
- Remove obsolete version attribute from compose file

This fixes the issue where SSH connections would fail with 'Server not found in known_hosts'
even when require_known_host was set to false in the policy configuration.

--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 # ─────────────────────────────────────────────────────────────
 # 🧩 mcp-ssh-orchestrator (STDIO MCP Server)
 # Purpose: Local test or integration with Claude / Docker MCP
@@ -8,7 +6,9 @@ version: "3.9"
 services:
   mcp-ssh:
     container_name: mcp-ssh-orchestrator
-    image: ghcr.io/samerfarida/mcp-ssh-orchestrator:0.1.0
+    build:
+      context: ..
+      dockerfile: Dockerfile
     restart: "no"
     stdin_open: true
     tty: true
