fix: resolve duplicate file patterns in bug and feature labels
- Separate bug and feature labels to avoid semantic conflicts
- Bug fixes now focus on test files (tests/**/*.py, test_*.py, etc.)
- New features now focus on source code files (src/**/*.py)
- This ensures labels are semantically meaningful and don't overlap

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -95,12 +95,13 @@ breaking:
   - CHANGELOG.md
   - pyproject.toml
 
-# Bug fixes
+# Bug fixes (typically involve test files and specific bug-related patterns)
 bug:
-  - src/**/*.py
   - tests/**/*.py
+  - test_*.py
+  - *_test.py
+  - tests/**/test_*.py
 
-# New features
+# New features (typically involve new functionality in source files)
 feature:
   - src/**/*.py
-  - tests/**/*.py
