docs: enforce consistent YAML style across all configuration files
- Added YAML Style Guide in POLICY_REFERENCE.md
- Standardized array formatting (empty/single: inline, multi-item: multi-line)
- Updated all policy examples and documentation
- Refactored example configuration files to follow style guide
- Improved readability and consistency across entire codebase

--- a/examples/example-policy.yml
+++ b/examples/example-policy.yml
@@ -91,8 +91,14 @@ rules:
 
   # Network diagnostics on non-production
   - action: "allow"
-    aliases: ["stg-*", "dev-*", "lab-*"]
-    tags: ["staging", "dev", "lab"]
+    aliases:
+      - "stg-*"
+      - "dev-*"
+      - "lab-*"
+    tags:
+      - "staging"
+      - "dev"
+      - "lab"
     commands:
       - "ping*"
       - "traceroute*"
