feat: Add SEP-1686 compliant async task support
- Add AsyncTaskManager with thread-safe task execution
- Implement 5 new MCP tools: ssh_run_async, ssh_get_task_status, ssh_get_task_result, ssh_get_task_output, ssh_cancel_async_task
- Add MCP notifications for task events (created, progress, completed, failed, cancelled)
- Add policy configuration for task TTL and progress intervals
- Update documentation with async task examples and benefits
- Add comprehensive test coverage for async functionality
- Bump version to 0.2.0

This resolves the issue of repeated SSH connections during long-running operations
by providing non-blocking execution with real-time progress monitoring.

--- a/examples/example-policy.yml
+++ b/examples/example-policy.yml
@@ -18,6 +18,8 @@ limits:
   max_output_bytes: 1048576
   host_key_auto_add: false
   require_known_host: true
+  task_result_ttl: 300  # 5 minutes (SEP-1686 keepAlive)
+  task_progress_interval: 5  # seconds
   
   # Hard-blocked command substrings (checked before rules)
   deny_substrings:
@@ -150,3 +152,4 @@ overrides:
     # Long-running maintenance
     longrun:
       max_seconds: 180
+      task_result_ttl: 1800  # 30 minutes for long-running workflows
