--- a/.github/workflows/sync-wiki.yml
+++ b/.github/workflows/sync-wiki.yml
@@ -12,7 +12,7 @@ jobs:
   sync-wiki:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write # Required to push to wiki
     
     steps:
       - name: Checkout main repository
@@ -33,16 +33,13 @@ jobs:
           mkdir -p wiki-sync
           cd wiki-sync
           
-          # Clone the existing wiki repository
+          # Clone the existing wiki repository with authentication
           echo "📥 Cloning wiki repository..."
-          git clone https://github.com/${{ github.repository }}.wiki.git .
+          git clone https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.wiki.git .
           
           # Copy new content from main repository
           echo "📋 Copying wiki content..."
           rsync -av --delete --exclude='.git' ../docs/wiki/ ./
-          
-          # Add .gitkeep to preserve empty directories
-          find . -type d -empty -exec touch {}/.gitkeep \;
           
           # Check for changes
           git add .
@@ -56,16 +53,15 @@ jobs:
             git commit -m "Sync wiki from main repository
 
           Updated from commit: ${{ github.sha }}
-          Triggered by: ${{ github.event.head_commit.message }}
           
           Changed files:
           $CHANGED_FILES
           
           [skip ci]"
             
-            # Push to wiki repository
+            # Push to wiki repository with authentication
             echo "🚀 Pushing to wiki repository..."
-            git push origin master
+            git push https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.wiki.git master
             
             echo "✅ Wiki synced successfully"
           else
@@ -73,192 +69,3 @@ jobs:
           fi
           
           echo "🎉 Wiki sync process completed"
-      
-      - name: Validate Wiki Content
-        run: |
-          echo "🔍 Validating wiki content..."
-          
-          # Check if wiki directory exists and has content
-          if [ -d "wiki-sync" ] && [ "$(ls -A wiki-sync)" ]; then
-            echo "✅ Wiki content directory exists and has content"
-            
-            # Count markdown files
-            MD_COUNT=$(find wiki-sync -name "*.md" | wc -l)
-            echo "📄 Found $MD_COUNT markdown files"
-            
-            # List main files
-            echo "📋 Main wiki files:"
-            find wiki-sync -name "*.md" -not -path "*/assets/*" | head -10 | while read file; do
-              echo "  - $(basename "$file")"
-            done
-            
-            # Check for required files
-            if [ -f "wiki-sync/_Sidebar.md" ]; then
-              echo "✅ _Sidebar.md found"
-            else
-              echo "⚠️ _Sidebar.md not found"
-            fi
-            
-            if [ -f "wiki-sync/Home.md" ]; then
-              echo "✅ Home.md found"
-            else
-              echo "⚠️ Home.md not found"
-            fi
-            
-            # Check for all 16 sections
-            required_sections=(
-              "01-MCP-Overview.md"
-              "02-Risks.md"
-              "03-Design-Goals.md"
-              "04-Architecture.md"
-              "05-Security-Model.md"
-              "06-Configuration.md"
-              "07-Tools-Reference.md"
-              "08-Usage-Cookbook.md"
-              "09-Deployment.md"
-              "10-Integrations.md"
-              "11-Observability-Audit.md"
-              "12-Troubleshooting.md"
-              "13-Contributing.md"
-              "14-Roadmap.md"
-              "15-FAQ.md"
-              "16-Glossary.md"
-            )
-            
-            echo "🔍 Checking required sections:"
-            missing_sections=()
-            for section in "${required_sections[@]}"; do
-              if [ -f "wiki-sync/$section" ]; then
-                echo "  ✅ $section"
-              else
-                echo "  ❌ $section"
-                missing_sections+=("$section")
-              fi
-            done
-            
-            if [ ${#missing_sections[@]} -gt 0 ]; then
-              echo "❌ Missing sections: ${missing_sections[*]}"
-              exit 1
-            else
-              echo "✅ All required sections present"
-            fi
-            
-          else
-            echo "❌ Wiki content directory is empty or doesn't exist"
-            exit 1
-          fi
-
-  validate-docs:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-      
-      - name: Install validation tools
-        run: |
-          pip install pyyaml
-      
-      - name: Validate YAML examples
-        run: |
-          echo "🔍 Validating YAML examples in documentation..."
-          
-          # Find all markdown files with YAML examples
-          find docs/wiki -name "*.md" -exec grep -l "```yaml" {} \; | while read file; do
-            echo "Validating YAML in: $file"
-            
-            # Extract YAML blocks and validate them
-            python3 << 'EOF'
-          import yaml
-          import sys
-          import re
-          
-          def extract_yaml_blocks(content):
-              """Extract YAML blocks from markdown content."""
-              pattern = r'```yaml\n(.*?)\n```'
-              matches = re.findall(pattern, content, re.DOTALL)
-              return matches
-          
-          def validate_yaml(yaml_content):
-              """Validate YAML content."""
-              try:
-                  yaml.safe_load(yaml_content)
-                  return True, None
-              except yaml.YAMLError as e:
-                  return False, str(e)
-          
-          # Read the file
-          with open(sys.argv[1], 'r') as f:
-              content = f.read()
-          
-          # Extract YAML blocks
-          yaml_blocks = extract_yaml_blocks(content)
-          
-          if not yaml_blocks:
-              print("  ℹ️ No YAML blocks found")
-              return
-          
-          # Validate each YAML block
-          for i, yaml_block in enumerate(yaml_blocks):
-              is_valid, error = validate_yaml(yaml_block)
-              if is_valid:
-                  print(f"  ✅ YAML block {i+1} is valid")
-              else:
-                  print(f"  ❌ YAML block {i+1} is invalid: {error}")
-                  sys.exit(1)
-          
-          print(f"  ✅ All {len(yaml_blocks)} YAML blocks are valid")
-          EOF
-          "$file" || echo "⚠️ YAML validation failed for $file"
-          done
-      
-      - name: Check documentation structure
-        run: |
-          echo "📊 Documentation structure analysis:"
-          
-          # Count files by type
-          echo "📄 Markdown files: $(find docs/wiki -name "*.md" | wc -l)"
-          echo "🎨 Mermaid files: $(find docs/wiki -name "*.mmd" | wc -l)"
-          echo "📁 Total size: $(du -sh docs/wiki | cut -f1)"
-          
-          # Check for required sections
-          required_sections=(
-            "01-MCP-Overview.md"
-            "02-Risks.md"
-            "03-Design-Goals.md"
-            "04-Architecture.md"
-            "05-Security-Model.md"
-            "06-Configuration.md"
-            "07-Tools-Reference.md"
-            "08-Usage-Cookbook.md"
-            "09-Deployment.md"
-            "10-Integrations.md"
-            "11-Observability-Audit.md"
-            "12-Troubleshooting.md"
-            "13-Contributing.md"
-            "14-Roadmap.md"
-            "15-FAQ.md"
-            "16-Glossary.md"
-          )
-          
-          echo "🔍 Checking required sections:"
-          missing_sections=()
-          for section in "${required_sections[@]}"; do
-            if [ -f "docs/wiki/$section" ]; then
-              echo "  ✅ $section"
-            else
-              echo "  ❌ $section"
-              missing_sections+=("$section")
-            fi
-          done
-          
-          if [ ${#missing_sections[@]} -gt 0 ]; then
-            echo "❌ Missing sections: ${missing_sections[*]}"
-            exit 1
-          else
-            echo "✅ All required sections present"
-          fi
