fix: update codecov-action input from 'file' to 'files' for v5
- Change 'file' to 'files' (plural) parameter for codecov-action@v5
- Fixes GitHub Actions error: Invalid action input 'file'
- v5 uses 'files' parameter instead of 'file'

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,7 +61,7 @@ jobs:
         uses: codecov/codecov-action@v5
         if: matrix.python-version == '3.11'
         with:
-          file: ./coverage.xml
+          files: ./coverage.xml
           flags: unittests
         continue-on-error: true
 
