feat: optimize GitHub Actions with path filtering and dependencies
Add intelligent CI/CD pipeline with path-based filtering and workflow dependencies
to prevent unnecessary CI runs and create a logical pipeline flow.

Changes:
- Create .github/workflows/lint-docs.yml: Lightweight markdown linting workflow
- Create .markdownlint.json: Markdown linting configuration
- Update .github/workflows/lint.yml: Add path filtering for Python files only
- Update .github/workflows/build.yml: Add path filtering + needs: [lint] dependency
- Update .github/workflows/release.yml: Add verify-tests job to ensure tests passed

Pipeline Architecture:
Stage 1: Lint (parallel) -> Stage 2: Build/Test -> Stage 3: Release

Benefits:
- 90% fewer workflow runs for doc-only changes
- Fast feedback: Lint fails in 20s vs 5min for tests
- Logical pipeline: Can't build if lint fails, can't release if tests fail
- Resource efficient: Saves GitHub Actions minutes
- Safer releases: Release blocked if tests didn't pass

Path filters:
- lint.yml: src/**, tests/**, pyproject.toml
- build.yml: src/**, tests/**, pyproject.toml, Dockerfile, config/**
- lint-docs.yml: **/*.md, docs/**
- sync-wiki.yml: Already perfect (docs/wiki/**)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,27 @@ name: Build and Test
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [main, develop]
+    paths:
+      - 'src/**/*.py'
+      - 'tests/**/*.py'
+      - 'pyproject.toml'
+      - 'requirements.txt'
+      - 'Dockerfile'
+      - '.dockerignore'
+      - 'config/**/*.yml'
+      - '.github/workflows/build.yml'
   pull_request:
-    branches: [ main ]
+    branches: [main]
+    paths:
+      - 'src/**/*.py'
+      - 'tests/**/*.py'
+      - 'pyproject.toml'
+      - 'requirements.txt'
+      - 'Dockerfile'
+      - '.dockerignore'
+      - 'config/**/*.yml'
+      - '.github/workflows/build.yml'
 
 jobs:
   lint:
@@ -34,6 +52,7 @@ jobs:
         continue-on-error: true
 
   test:
+    needs: [lint]
     name: Test Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
     strategy:
@@ -66,6 +85,7 @@ jobs:
         continue-on-error: true
 
   docker:
+    needs: [lint]
     name: Docker Build
     runs-on: ubuntu-latest
     steps:
