--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -7,14 +7,13 @@ on:
   push:
     branches: [ "main" ]
 
-permissions:
-  id-token: write          # required for publishing
-  contents: read
-  security-events: write
-
 jobs:
   analysis:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write          # required for publishing results and badge
+      contents: read           # required for checking branch protection
+      security-events: write   # required for publishing results
     steps:
       - name: Checkout
         uses: actions/checkout@v4
