--- a/.github/workflows/scorecards.yml
+++ b/.github/workflows/scorecards.yml
@@ -1,32 +1,57 @@
-name: OpenSSF Scorecard
+name: Scorecard analysis workflow
 
 on:
-  branch_protection_rule:
-  schedule:
-    - cron: '23 3 * * 1'   # weekly
   push:
-    branches: [ "main" ]
+    branches:
+      - main
+  schedule:
+    # Weekly on Saturdays
+    - cron: '30 1 * * 6'
+  branch_protection_rule:
+
+permissions:
+  read-all
 
 jobs:
   analysis:
+    name: Scorecard analysis
     runs-on: ubuntu-latest
     permissions:
-      id-token: write          # required for publishing results and badge
-      contents: read           # required for checking branch protection
-      security-events: write   # required for publishing results
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      # Needed for Code scanning upload
+      security-events: write
+      # Needed for GitHub OIDC token if publish_results is true
+      id-token: write
 
-      - name: Run OpenSSF Scorecard
-        uses: ossf/scorecard-action@v2.4.0
+    steps:
+      - name: "Checkout code"
+        uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+
+      - name: "Run analysis"
+        uses: ossf/scorecard-action@v2.4.3
         with:
           results_file: results.sarif
           results_format: sarif
+          # Scorecard team runs a weekly scan of public GitHub repos,
+          # see https://github.com/ossf/scorecard#public-data.
+          # Setting `publish_results: true` helps us scale by leveraging your workflow to
+          # extract the results instead of relying on our own infrastructure to run scans.
+          # And it's free for you!
           publish_results: true
         continue-on-error: true
 
-      - name: Upload SARIF to code scanning
+      # Upload the results as artifacts (optional). Commenting out will disable
+      # uploads of run results in SARIF format to the repository Actions tab.
+      # https://docs.github.com/en/actions/advanced-guides/storing-workflow-data-as-artifacts
+      - name: "Upload artifact"
+        uses: actions/upload-artifact@v4
+        with:
+          name: SARIF file
+          path: results.sarif
+          retention-days: 5
+
+      - name: "Upload to GitHub Code Scanning"
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: results.sarif
