--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,16 +22,20 @@ jobs:
   ruff:
     name: Ruff Linting
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@8e5e9e2adc2337b4197c497aab16fe97a93546ab # v4.2.2
       
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@c3d2d0c3d0079a795c17a7f3fd8adf2e4b1c8125 # v5.5.1
         with:
           python-version: "3.11"
       
       - name: Install dependencies
-        run: pip install -e ".[dev]"
+        run: |
+          pip install --require-hashes -r requirements-dev.txt
+          pip install -e ".[dev]"
       
       - name: Run ruff check
         run: ruff check src/ tests/ --output-format=github
@@ -39,16 +43,20 @@ jobs:
   black:
     name: Black Formatting
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@8e5e9e2adc2337b4197c497aab16fe97a93546ab # v4.2.2
       
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@c3d2d0c3d0079a795c17a7f3fd8adf2e4b1c8125 # v5.5.1
         with:
           python-version: "3.11"
       
       - name: Install dependencies
-        run: pip install -e ".[dev]"
+        run: |
+          pip install --require-hashes -r requirements-dev.txt
+          pip install -e ".[dev]"
       
       - name: Run black
         run: black --check --diff src/ tests/
@@ -56,16 +64,20 @@ jobs:
   mypy:
     name: Type Checking
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@8e5e9e2adc2337b4197c497aab16fe97a93546ab # v4.2.2
       
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@c3d2d0c3d0079a795c17a7f3fd8adf2e4b1c8125 # v5.5.1
         with:
           python-version: "3.11"
       
       - name: Install dependencies
-        run: pip install -e ".[dev]"
+        run: |
+          pip install --require-hashes -r requirements-dev.txt
+          pip install -e ".[dev]"
       
       - name: Run mypy
         run: mypy src/ --ignore-missing-imports
