--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,13 @@ readme = "README.md"
 requires-python = ">=3.11"
 license = { text = "Apache-2.0" }
 authors = [{ name = "Sammy Farida" }]
+classifiers = [
+  "License :: OSI Approved :: Apache Software License",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+]
 dependencies = [
   "mcp>=1.1.0,<2.0.0",
   "PyYAML>=6.0.2,<7.0.0",
@@ -26,6 +33,7 @@ dev = [
   "ruff>=0.1.0,<1.0.0",
   "black>=24.0.0,<25.0.0",
   "mypy>=1.0.0,<2.0.0",
+  "pip-tools>=7.0.0,<8.0.0",
 ]
 
 [project.scripts]
