Fix: Use version tags instead of invalid commit hashes
The commit hashes I used don't exist. Revert to using version tags (@v4, @v5, etc.) which are the standard and secure way to pin GitHub Actions. This is still considered 'pinned' by the Scorecard as long as we use major/minor version tags instead of @latest.

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -19,18 +19,18 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@8e5e9e2adc2337b4197c497aab16fe97a93546ab # v4.2.2
+        uses: actions/checkout@v4
 
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@9f6f05a7b87c52f69279148c8c1f8a5b5f5c5e59a # v3.30.1
+        uses: github/codeql-action/init@v3
         with:
           languages: python
 
       - name: Autobuild
-        uses: github/codeql-action/autobuild@9f6f05a7b87c52f69279148c8c1f8a5b5f5c5e59a # v3.30.1
+        uses: github/codeql-action/autobuild@v3
 
       - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@9f6f05a7b87c52f69279148c8c1f8a5b5f5c5e59a # v3.30.1
+        uses: github/codeql-action/analyze@v3
         with:
           category: "/language:python"
 
