--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,10 +31,10 @@ jobs:
     permissions:
       contents: read
     steps:
-      - uses: actions/checkout@8e5e9e2adc2337b4197c497aab16fe97a93546ab # v4.2.2
+      - uses: actions/checkout@v4
       
       - name: Set up Python
-        uses: actions/setup-python@c3d2d0c3d0079a795c17a7f3fd8adf2e4b1c8125 # v5.5.1
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
       
@@ -64,7 +64,7 @@ jobs:
         python-version: ["3.11", "3.12", "3.13"]
     
     steps:
-      - uses: actions/checkout@8e5e9e2adc2337b4197c497aab16fe97a93546ab # v4.2.2
+      - uses: actions/checkout@v4
       
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@c3d2d0c3d0079a795c17a7f3fd8adf2e4b1c8125 # v5.5.1
@@ -81,7 +81,7 @@ jobs:
           pytest --cov=mcp_ssh --cov-report=xml --cov-report=term
       
       - name: Upload coverage
-        uses: codecov/codecov-action@4f11fb3a1632a5e794ac52697fa5b1f9a07e3fdf3 # v5.0.5
+        uses: codecov/codecov-action@v5
         if: matrix.python-version == '3.11'
         with:
           files: ./coverage.xml
@@ -96,13 +96,13 @@ jobs:
       contents: read
       packages: read
     steps:
-      - uses: actions/checkout@8e5e9e2adc2337b4197c497aab16fe97a93546ab # v4.2.2
+      - uses: actions/checkout@v4
       
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@d6eb11a8320518a2b32b42ef445e8332351aba2e # v3.3.0
+        uses: docker/setup-buildx-action@v3
       
       - name: Build Docker image
-        uses: docker/build-push-action@5ccc0f5fea4c39795065b8b48188c3bdca4b53e6 # v5.4.0
+        uses: docker/build-push-action@v5
         with:
           context: .
           push: false
