fix(ci): include all workflow files in build and lint triggers
Update path filters to include .github/workflows/*.yml so that
build and lint workflows trigger on changes to any workflow file,
not just their own files. This fixes required checks not running
on dependabot PRs that update workflow files.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ on:
       - 'Dockerfile'
       - '.dockerignore'
       - 'config/**/*.yml'
-      - '.github/workflows/build.yml'
+      - '.github/workflows/*.yml'
   pull_request:
     branches: [main]
     paths:
@@ -22,7 +22,7 @@ on:
       - 'Dockerfile'
       - '.dockerignore'
       - 'config/**/*.yml'
-      - '.github/workflows/build.yml'
+      - '.github/workflows/*.yml'
 
 jobs:
   lint:
