ci(labeler): migrate to actions/labeler@v6 and v2 config schema\n\n- Update workflow to actions/labeler@v6\n- Convert .github/labeler.yml to v2 (changed-files/any-glob-to-any-file)\n- Fixes labeler failure due to old schema

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -3,94 +3,122 @@
 
 # Core source code changes
 python:
-  - src/**/*.py
-  - tests/**/*.py
-  - pyproject.toml
-  - requirements*.txt
+  - changed-files:
+      - any-glob-to-any-file:
+          - src/**/*.py
+          - tests/**/*.py
+          - pyproject.toml
+          - requirements*.txt
 
 # Documentation changes
 documentation:
-  - docs/**/*
-  - README.md
-  - CHANGELOG.md
-  - CONTRIBUTING.md
-  - SECURITY.md
-  - "*.md"
+  - changed-files:
+      - any-glob-to-any-file:
+          - docs/**/*
+          - README.md
+          - CHANGELOG.md
+          - CONTRIBUTING.md
+          - SECURITY.md
+          - "*.md"
 
 # Configuration changes
 configuration:
-  - config/**/*
-  - examples/**/*
-  - compose/**/*
-  - Dockerfile
-  - docker-compose.yml
+  - changed-files:
+      - any-glob-to-any-file:
+          - config/**/*
+          - examples/**/*
+          - compose/**/*
+          - Dockerfile
+          - docker-compose.yml
 
 # Docker and deployment
 docker:
-  - Dockerfile
-  - compose/**/*
-  - docker-compose.yml
+  - changed-files:
+      - any-glob-to-any-file:
+          - Dockerfile
+          - compose/**/*
+          - docker-compose.yml
 
 # Security-related changes
 security:
-  - secrets/**/*
-  - keys/**/*
-  - config/credentials.yml
-  - config/policy.yml
-  - docs/SECURITY.md
+  - changed-files:
+      - any-glob-to-any-file:
+          - secrets/**/*
+          - keys/**/*
+          - config/credentials.yml
+          - config/policy.yml
+          - docs/SECURITY.md
 
 # Testing changes
 testing:
-  - tests/**/*
-  - "test_*.py"
-  - "*_test.py"
+  - changed-files:
+      - any-glob-to-any-file:
+          - tests/**/*
+          - "test_*.py"
+          - "*_test.py"
 
 # Assets and branding
 assets:
-  - assets/**/*
-  - "*.svg"
-  - "*.png"
-  - "*.jpg"
-  - "*.jpeg"
-  - "*.gif"
+  - changed-files:
+      - any-glob-to-any-file:
+          - assets/**/*
+          - "*.svg"
+          - "*.png"
+          - "*.jpg"
+          - "*.jpeg"
+          - "*.gif"
 
 # CI/CD and GitHub workflows
 ci:
-  - .github/**/*
-  - .github/workflows/**/*
-  - .github/actions/**/*
+  - changed-files:
+      - any-glob-to-any-file:
+          - .github/**/*
+          - .github/workflows/**/*
+          - .github/actions/**/*
 
 # Dependencies and package management
 dependencies:
-  - pyproject.toml
-  - requirements*.txt
-  - Pipfile
-  - Pipfile.lock
-  - poetry.lock
+  - changed-files:
+      - any-glob-to-any-file:
+          - pyproject.toml
+          - requirements*.txt
+          - Pipfile
+          - Pipfile.lock
+          - poetry.lock
 
 # Server configuration
 server-config:
-  - servers/**/*
-  - config/servers.yml
-  - config/credentials.yml
+  - changed-files:
+      - any-glob-to-any-file:
+          - servers/**/*
+          - config/servers.yml
+          - config/credentials.yml
 
 # Policy and permissions
 policy:
-  - config/policy.yml
-  - src/mcp_ssh/policy.py
+  - changed-files:
+      - any-glob-to-any-file:
+          - config/policy.yml
+          - src/mcp_ssh/policy.py
 
 # SSH client functionality
 ssh-client:
-  - src/mcp_ssh/ssh_client.py
-  - src/mcp_ssh/tools/**/*
+  - changed-files:
+      - any-glob-to-any-file:
+          - src/mcp_ssh/ssh_client.py
+          - src/mcp_ssh/tools/**/*
 
 # MCP server functionality
 mcp-server:
-  - src/mcp_ssh/mcp_server.py
-  - src/mcp_ssh/config.py
-  - servers/**/*
+  - changed-files:
+      - any-glob-to-any-file:
+          - src/mcp_ssh/mcp_server.py
+          - src/mcp_ssh/config.py
+          - servers/**/*
 
 # Breaking changes (major version updates)
 breaking:
-  - CHANGELOG.md
-  - pyproject.toml
+  - changed-files:
+      - any-glob-to-any-file:
+          - CHANGELOG.md
+          - pyproject.toml
