chore: Add plan.plan.md to .gitignore
Prevent planning documents from being accidentally committed to repository

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,11 @@ known_hosts
 !examples/*.yml
 !examples/*.key.example
 
+
+# Planning documents (not meant to be committed)
+plan.plan.md
+*.plan.md
+
+# Planning documents (not meant to be committed)
+plan.plan.md
+*.plan.md
