fix(release): Enable build workflow to run on tag pushes
- Added tags: 'v*' trigger to Build and Test workflow
- Added tag detection step to bypass paths filter for tags
- Ensures tests run before release workflow waits for them
- Fixes 'The requested check was never run' error in release

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,8 @@ name: Build and Test
 on:
   push:
     branches: [main, develop]
+    tags:
+      - 'v*'
     paths:
       - 'src/**/*.py'
       - 'tests/**/*.py'
@@ -23,9 +25,18 @@ jobs:
     permissions:
       contents: read
     outputs:
-      has-code-changes: ${{ steps.filter.outputs.src == 'true' || steps.filter.outputs.tests == 'true' || steps.filter.outputs.config == 'true' || steps.filter.outputs.docker == 'true' }}
+      has-code-changes: ${{ steps.is-tag.outputs.is-tag == 'true' || steps.filter.outputs.src == 'true' || steps.filter.outputs.tests == 'true' || steps.filter.outputs.config == 'true' || steps.filter.outputs.docker == 'true' }}
     steps:
       - uses: actions/checkout@v4
+      
+      - name: Check if tag push
+        id: is-tag
+        run: |
+          if [[ "${{ github.ref_type }}" == "tag" ]]; then
+            echo "is-tag=true" >> $GITHUB_OUTPUT
+          else
+            echo "is-tag=false" >> $GITHUB_OUTPUT
+          fi
       
       - name: Check for code changes
         uses: dorny/paths-filter@v3
