Security: Fix SSH host key validation (CWE-295) (#35)
* Security: Fix SSH host key validation (CWE-295)

Fix CodeQL security alert by removing unsafe Paramiko host key policies.

Changes:
- Remove AcceptPolicy class and AutoAddPolicy() usage
- Always use RejectPolicy() for strict host key verification
- Deprecate host_key_auto_add and require_known_host=False options
- Add deprecation warnings when unsafe configurations are detected
- Update all SSH connections to require known_hosts entry
- Update documentation and examples to reflect security requirements

Fixes CodeQL alert: py/paramiko-missing-host-key-validation
References: CWE-295

Breaking Change: Configurations using host_key_auto_add: true or
require_known_host: false will now fail with clear error messages.
Users must populate known_hosts file before connecting.

* Fix: Apply black formatting and remove unused import

--- a/examples/example-policy.yml
+++ b/examples/example-policy.yml
@@ -143,10 +143,10 @@ overrides:
       max_seconds: 30
       max_output_bytes: 524288
     
-    # Lab: relaxed for experimentation
+    # Lab: relaxed timeout for experimentation
+    # Note: host_key_auto_add and require_known_host=False are deprecated for security
+    # All connections require known_hosts entry (CWE-295)
     lab:
-      host_key_auto_add: true
-      require_known_host: false
       max_seconds: 90
     
     # Long-running maintenance
