Update CHANGELOG, README, and documentation for release 0.3.3 (#43)
- **CHANGELOG**: Added details for version 0.3.3, including changes to the compose workflow, quick start bootstrap, and documentation cleanup.
- **README**: Revised project description to emphasize zero-trust SSH orchestration and updated quick start instructions to highlight the new setup script.
- **Documentation**: Removed deprecated legacy files, improved security policy reporting, and clarified configuration examples. Enhanced glossary definitions and added new tags for security contexts.
- **Compose**: Updated docker-compose.yml to pin the image version to 0.3.3 and improved setup script to generate a default .env file.
- **Examples**: Updated example configurations to reflect new practices and added descriptions for clarity.

--- a/examples/example-credentials.yml
+++ b/examples/example-credentials.yml
@@ -4,43 +4,50 @@
 # Copy this to config/credentials.yml and customize for your environment.
 #
 # SECURITY NOTES:
-#   - Never commit real secrets to Git
-#   - Use Docker secrets or environment variables for passwords/passphrases
-#   - Keep SSH private keys in /app/keys (mounted read-only)
-#   - Set key file permissions to 0400 (read-only for owner)
+#   - Never commit real secrets to Git.
+#   - Mount your private keys into /app/keys (read-only) with chmod 0400.
+#   - Store passwords/passphrases as Docker secrets or env vars (see below).
+#   - Secrets are resolved in the following order:
+#       1. Environment variable: MCP_SSH_SECRET_<NAME_IN_UPPERCASE>
+#       2. Docker secret file:   /app/secrets/<name>
 #
 # Fields:
-#   name: unique identifier referenced by servers.yml (required)
-#   username: SSH username (required)
-#   key_path: path to private key file relative to /app/keys or absolute path
-#   password_secret: name of secret/env var containing password (for password auth)
-#   key_passphrase_secret: name of secret/env var containing key passphrase
+#   name                 : unique identifier referenced by servers.yml (required)
+#   username             : SSH username (required)
+#   key_path             : private key path relative to /app/keys (or absolute path)
+#   password_secret      : secret name containing SSH password (optional)
+#   key_passphrase_secret: secret name containing passphrase for encrypted key (optional)
 #
-# Secret resolution order:
-#   1. Environment variable: MCP_SSH_SECRET_<NAME> (uppercase)
-#   2. Docker secret file: /app/secrets/<name>
+# Example secret setup:
+#   echo "super-secret" > secrets/prod_admin_password.txt
+#   docker secret create prod_admin_password secrets/prod_admin_password.txt
+#   export MCP_SSH_SECRET_PROD_ADMIN_PASSWORD=super-secret   # optional env alternative
 
 entries:
-  - name: "default"
+  # Production automation account using Ed25519 key (recommended)
+  - name: "prod-admin"
     username: "ubuntu"
-    key_path: "id_ed25519"
-    key_passphrase_secret: ""
-    password_secret: ""
+    key_path: "prod/id_ed25519"
+    key_passphrase_secret: "prod_admin_passphrase"   # leave blank if unencrypted
+    password_secret: ""                              # password auth disabled
 
-  - name: "staging"
+  # Staging deployment user with encrypted RSA key (passphrase pulled from secrets)
+  - name: "stg-deploy"
     username: "deploy"
-    key_path: "id_rsa"
-    key_passphrase_secret: "staging_key_passphrase"
+    key_path: "staging/id_rsa_encrypted"
+    key_passphrase_secret: "stg_deploy_key_passphrase"
     password_secret: ""
 
-  - name: "password_example"
-    username: "admin"
+  # Lab maintenance account authenticating with password stored in secret
+  - name: "lab-maint"
+    username: "maint"
     key_path: ""
     key_passphrase_secret: ""
-    password_secret: "admin_password"
+    password_secret: "lab_maint_password"
 
-  - name: "encrypted_key_example"
-    username: "deploy"
-    key_path: "id_rsa_encrypted"
-    key_passphrase_secret: "key_passphrase"
-    password_secret: ""
+  # Example mixed-mode user: password fallback plus passphrase-protected key
+  - name: "ops-fallback"
+    username: "ops"
+    key_path: "shared/id_rsa_encrypted"
+    key_passphrase_secret: "ops_key_passphrase"
+    password_secret: "ops_password"
